--- a/app/views/index.html
+++ b/app/views/index.html
@@ -10,7 +10,7 @@
     {% include "govuk-prototype-kit/includes/homepage-top.njk" %}
 
     <h1 class="govuk-heading-xl">
-      {{ serviceName }} - test edit
+      {{ serviceName }} - test edit #2
     </h1>
 
     {% include "govuk-prototype-kit/includes/homepage-bottom.njk" %}
