--- a/app/views/index.html
+++ b/app/views/index.html
@@ -10,8 +10,12 @@
     {% include "govuk-prototype-kit/includes/homepage-top.njk" %}
 
     <h1 class="govuk-heading-xl">
-      {{ serviceName }} - test edit #3
+      {{ serviceName }} 
     </h1>
+
+    <p class="govukuk-body">
+      This is my test text - Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere, ducimus accusamus saepe placeat sint numquam? Voluptate alias blanditiis omnis facere, porro iste perspiciatis natus cum veniam ullam enim itaque pariatur.
+    </p>
 
   </div>
 </div>
