--- a/app/views/index.html
+++ b/app/views/index.html
@@ -14,7 +14,7 @@
     </h1>
 
     <p class="govukuk-body">
-      This is my test text - Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere, ducimus accusamus saepe placeat sint numquam? Voluptate alias blanditiis omnis facere, porro iste perspiciatis natus cum veniam ullam enim itaque pariatur.
+      This is my test text - Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere, ducimus accusamus saepe placeat sint numquam? Voluptate alias blanditiis omnis facere, porro iste perspiciatis natus cum veniam ullam enim itaque pariatur. New edit v2.
     </p>
 
   </div>
