--- a/app/views/index.html
+++ b/app/views/index.html
@@ -13,9 +13,13 @@
       <abbr title="Government Design System">GDS</abbr> demos
     </h1>
 
-    <p class="govuk-body govuk-!-margin-bottom-8">
-      The 'Space travel service' prototype has been created. A new repository on github was created (gds-demos). 'Branching' is demonstrated via the use of form validation error pages. (Submit forms without values or selections).
+    <p class="govuk-body">
+      The 'Space travel service' prototype has been created. A new repository on github was created (gds-demos).
     </p>
+
+    <p class="govuk-body govuk-!-margin-bottom-8">
+      '<span class="govuk-!-font-weight-bold">Branching</span>' is demonstrated via the use of form validation error pages. (Submit the forms without values or selections having been made).
+    </p>    
 
     <ul class="govuk-list govuk-list--bullet govuk-!-margin-bottom-8">
       <li>
