added missing address error state pg

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -26,7 +26,7 @@
         <a class="govuk-link govuk-link--no-visited-state" href="space-proto/" rel="noreferrer noopener" target="_blank">View the 'Space travel service' prototype (opens in new tab)</a>
       </li>
       <li>
-        <a class="govuk-link govuk-link--no-visited-state" href="https://github.com/DH02/gds-demos" rel="noreferrer noopener" target="_blank"><span class="demos-no-wrap"><abbr>gds</abbr>-demos</span> github branch (opens in new tab)</a>
+        <a class="govuk-link govuk-link--no-visited-state" href="https://github.com/DH02/gds-demos" rel="noreferrer noopener" target="_blank"><span class="demos-no-wrap"><abbr>gds</abbr>-demos</span> github repository (opens in new tab)</a>
       </li>
     </ul>
 
