footer links and index link update

--- a/app/views/space-proto/confirmation.html
+++ b/app/views/space-proto/confirmation.html
@@ -31,7 +31,7 @@
         </p>
 
         <div class="govuk-inset-text">
-          This demonstration prototype is complete. Use the '<span class="govuk-!-font-weight-bold">Clear data</span>' link in the page footer to start again.
+          This demonstration prototype is complete. Use the '<span class="govuk-!-font-weight-bold">Clear data</span>' link in the page footer to <a href="/space-proto/index.html" class="govuk-link govuk-link--no-visited-state">start again</a>.
         </div>
 
         <p class="govuk-body">
